# riscv_sim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build.py
sim/baselib/: linked_list.c  linked_list.h
sim/isa/: instr_branch.c  instr_imm.c  instr_reg.c  isa_types.h
sim/runner/: elf_tools.c  elf_tools.h  global.h  sim.h  sim_main.c  sim_ops.c
sim/test/elf/: CMakeLists.txt  elf_reader.c
sim/test/immediate/: imm.elf  imm.s
sim/test/jump/: jump.elf  jump.s
sim/test/lui_auipc/: lui_auipc.elf  lui_auipc.s
sim/test/register/: reg.elf  reg.s
util/elf/: CMakeLists.txt  elf_reader.c
